--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-storage:19.2.1'
 
     //noinspection GradleCompatible
     testImplementation 'junit:junit:4.+'
@@ -67,5 +68,9 @@ dependencies {
     // Glide and Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    // Google
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
 
 }
