Handle offline actions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
+        android:name=".triponeer"
         android:allowBackup="true"
         android:icon="@drawable/launcher"
         android:label="Triponeer"
