--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.firebase:firebase-storage:19.2.1'
 
     //noinspection GradleCompatible
     testImplementation 'junit:junit:4.+'
@@ -72,6 +71,8 @@ dependencies {
 
     // Google
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.firebase:firebase-storage:19.2.1'
 
-
+    //OK http
+    implementation 'com.squareup.okhttp3:okhttp:2.4.0'
 }
